# EquiCode

./: .gitignore  Cargo.toml  README.md
skills/filesystem/: run.py  run.sh  skill.json
src/: config.rs  lib.rs  main.rs
src/agent/: context.rs  mod.rs
src/llm/: mod.rs  openrouter.rs
src/pipeline/: assertions.rs  mod.rs  prompt.rs  runner.rs
src/retrieval/: mod.rs
src/store/: mod.rs  types.rs
src/tools/: builtin_fs.rs  builtin_shell.rs  mod.rs  monty.rs
