[package]
name = "varctx_proto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
zstd = "0.13"
sled = "0.34"
tracing = "0.1"
tracing-subscriber = "0.3"
llama-cpp-2 = "0.1"
encoding_rs = "0.8"
ratatui = "0.29"
crossterm = "0.27"
arboard = "3"
